# kaukasus-offensive

backend/: main.py  package-lock.json  package.json  pyproject.toml  test.js
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  components.js  game.js  index.js  savegame.json  style.css
frontend/src/components/: AnimatedRoutes.js  Header.js  MapMarker.js  Slot.js  Slots.js  SmallMap.js  Statistics.js  objectivePopup.css
frontend/src/img/airframes/: AV-8B NA
frontend/src/routes/: briefing.jsx  index.jsx
