[tool.poetry]
name = "ko-backend"
version = "0.1.0"
description = ""
authors = ["Hubert Marek <polskimacerator@gmail.com>"]
license = "yes"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.76.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
uvicorn = "^0.17.6"
black = "^22.3.0"
isort = "^5.10.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
